--- a/appspec.yml
+++ b/appspec.yml
@@ -3,14 +3,14 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/nginx-app
+    destination: /home/ubuntu/myapp
 
 hooks:
   AfterInstall:
     - location: scripts/install_nginx.sh
       timeout: 180
-      runas: ubuntu
+      runas: root         # changed from ubuntu
   ApplicationStart:
     - location: scripts/start_nginx.sh
       timeout: 180
-      runas: ubuntu
+      runas: root         # changed from ubuntu
